# PyCleaner

./: .coveragerc  .gitignore  .travis.yml  README.md  pyproject.toml
.github/workflows/: test.yml
pycleaner/: __init__.py  cli.py  core.py  d.py  data.py  database.py  ori_core.py  play.py  utils.py
tests/: test_features.py  test_intregations.py  test_performances.py  test_units.py
tests/test_files/: sample.py
